make sure to overflow maths stuff

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -255,6 +255,12 @@ kbd {
 }
 
 // Patch katex's newline size
+.katex-display {
+  overflow: scroll;
+  padding-top: $line-height / 2;
+  padding-bottom: $line-height / 2;
+}
+
 .katex .katex-html>.newline {
   height: 1em;
 }
